--- a/server/public/webapp.html
+++ b/server/public/webapp.html
@@ -37,5 +37,10 @@
     <button onclick="onClickLogout()">Logout</button>
 </div>
 
+<h1>Facebook Test</h1>
+<div id="fbtest">
+    <button onclick="onClickFBTest()">FB Test</button>
+</div>
+
 </body>
 </html>
