--- a/server/public/webapp.html
+++ b/server/public/webapp.html
@@ -42,5 +42,13 @@
     <button onclick="onClickFBTest()">FB Test</button>
 </div>
 
+<h1>Upload Image</h1>
+<div id="upload_image">
+    <form enctype="multipart/form-data">
+        File: <input type="file" name="image"/>
+    </form>
+    <button onclick="onClickUploadImage()">Upload Image</button>
+</div>
+
 </body>
 </html>
