--- a/server/public/webapp.html
+++ b/server/public/webapp.html
@@ -48,6 +48,9 @@
         File: <input type="file" name="image"/>
     </form>
     <button onclick="onClickUploadImage()">Upload Image</button>
+    <div>
+        <img src=""/>
+    </div>
 </div>
 
 </body>
