--- a/server/public/webapp.html
+++ b/server/public/webapp.html
@@ -53,5 +53,13 @@
     </div>
 </div>
 
+<h1>Get Image</h1>
+<div id="get_image">
+    <button onclick="onClickGetImage()">Get Image</button>
+    <div>
+
+    </div>
+</div>
+
 </body>
 </html>
