--- a/server/public/webapp.html
+++ b/server/public/webapp.html
@@ -56,6 +56,7 @@
 <h1>Get Image</h1>
 <div id="get_image">
     <button onclick="onClickGetImage()">Get Image</button>
+    <button onclick="onClickGetImageThumbnail()">Get Thumbnail</button>
     <div>
 
     </div>
