--- a/server/public/webapp.html
+++ b/server/public/webapp.html
@@ -19,6 +19,17 @@
 
 </div>
 
+<h1>Update Avatar</h1>
+<div id="update_avatar">
+    <form enctype="multipart/form-data">
+        File: <input type="file" name="image"/>
+    </form>
+    <button onclick="onClickUpdateAvatar()">Upload Avatar</button>
+    <div>
+        <img src=""/>
+    </div>
+</div>
+
 <h1>Login</h1>
 <div id="login">
     <p>Username: <input type="text"/></p>
